# marvin_light_control

./: .gitignore  Cargo.toml  README.md  justfile
mlc_communication/: Cargo.toml
mlc_communication/src/: lib.rs  services.rs
mlc_data/: Cargo.toml
mlc_data/src/: bounded.rs  endpoints.rs  lib.rs  misc.rs  project.rs
mlc_data/src/fixture/: blueprint.rs  mod.rs  patched.rs
mlc_data/src/fixture/blueprint/: entities.rs  units.rs
mlc_data/src/fixture/patched/: feature.rs
mlc_data/src/project/: universe.rs
mlc_interface/: Cargo.toml  Dioxus.toml
mlc_interface/assets/: configure.css  connect.css  main.css  program.css  project_common.css  projects.css  show.css  toaster.css  utils.css
mlc_interface/src/: connect.rs  main.rs  toaster.rs  utils.rs
mlc_interface/src/screens/: configure.rs  mod.rs  program.rs  projects.rs  show.rs
mlc_ofl/: Cargo.toml
mlc_ofl/src/: convert.rs  lib.rs  main.rs
mlc_ofl/src/convert/: entities.rs  helpers.rs  parse_helpers.rs  parseable.rs  units.rs
mlc_server/: Cargo.toml
mlc_server/src/: endpoints.rs  global_services.rs  logging.rs  main.rs  misc.rs  project.rs  server.rs  tui.rs  universe.rs
mlc_server/src/endpoints/: driver.rs  driver_log.rs  driver_sacn.rs
mlc_server/src/project/: project_loader.rs
mlc_site/: astro.config.mjs  package-lock.json  package.json
mlc_site/src/content/docs/: index.mdx
mlc_site/src/content/docs/guides/: guides.mdx
mlc_site/src/content/docs/reference/: roadmap.mdx  structure.mdx
mlc_site/src/styles/: custom.css
