[workspace]
members = [
    "mlc_communication",
    "mlc_data",
    "mlc_server",
    "mlc_interface",
    "mlc_ofl",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["Tim Fritzen <fritzentim10@gmail.com>"]
homepage = "https://marvinlightcontrol.de"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.39" }
thiserror = { version = "2" }
tracing = { version = "0.1.41" }
log = "0.4.26"
tokio = { version = "1.43.0", features = [
    "full",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }
futures = { version = "0.3.31" }
macro_rules_attribute = "0.2.0"
async-trait = "0.1.86"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
