[package]
name = "mlc_communication"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true


[dependencies]
macro_rules_attribute.workspace = true
serde.workspace = true
mlc_data = { path = "../mlc_data" }
thiserror.workspace = true
log.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
# wtransport.workspace = true
remoc = { version = "^0.15", default-features = false, features = [
    "full",
    "codec-bincode",
    "codec-ciborium",
    "default-codec-ciborium",
] }
