[package]
name = "mlc_data"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
macro_rules_attribute.workspace = true
serde.workspace = true
chrono = { version = "0.4.40", features = ["serde"] }
either = { version = "1.15.0" , features = ["serde"]}


[dev-dependencies]
breakpoint = "0.1.0"