[package]
name = "mlc_ofl"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
mlc_data = { path = "../mlc_data" }
reqwest = "0.12.12"
serde_json = "1.0.140"
log.workspace = true
zip = "2.2.3"
tokio.workspace = true
simple_logger = "5.0.0"
regex = "1.11.1"
either = "1.15.0"