[package]
name = "mlc_server"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
mlc_communication = { path = "../mlc_communication" }
mlc_data = { path = "../mlc_data" }
log.workspace = true
fern = { version = "0.7", features = ["colored"] }
chrono = "*"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde.workspace = true
