[package]
name = "mlc_server"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util = "0.7.14"
mlc_communication = { path = "../mlc_communication" }
mlc_ofl = { path = "../mlc_ofl" }
mlc_data = { path = "../mlc_data" }
log.workspace = true
fern = { version = "0.7", features = ["colored"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["json", "time"] }
tracing-log = "0.2.0"
ansi-to-tui = "7.0.0"
chrono = "*"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-logger = "0.17.0"
serde.workspace = true
bson.workspace = true
json5.workspace = true
directories.workspace = true
futures = "0.3.31"
lazy_static = "1.5.0"
